--- a/MovieRecommender2022.Web/Pages/Index.cshtml
+++ b/MovieRecommender2022.Web/Pages/Index.cshtml
@@ -6,11 +6,180 @@
 
 <div class="text-center">
     <h1 class="display-4">Movie recommender</h1>
+    <a href="Movies">Movies</a>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <div class="text-center">
     <h1 class="display-4">Find a movie</h1>
 </div>
 
+<form method="post" id="mainForm">
+    @*we use method post, sent to server, but not seen in address bar*@
+    <input type="hidden" value="" id="searchTypeSelected" name="searchTypeSelected" />
+    <div class="mb-3 row">
+        <div class="form-check">
+            <input onclick="selectSearchType(this)" class="form-check-input" type="radio" name="searchType" id="flexRadioDefault1" @(Model.SearchType == "T" ? "checked" : "") value="T">
+            <label class="form-check-label" for="flexRadioDefault1">
+                Title
+            </label>
+        </div>
+        <div class="form-check">
+            <input onclick="selectSearchType(this)" class="form-check-input" type="radio" name="searchType" id="flexRadioDefault2" @(Model.SearchType == "K" ? "checked" : "") value="K">
+            <label class="form-check-label" for="flexRadioDefault2">
+                Keyword
+            </label>
+        </div>
+        <div class="form-check">
+            <input onclick="selectSearchType(this)" class="form-check-input" type="radio" name="searchType" id="flexRadioDefault3" @(Model.SearchType == "G" ? "checked" : "") value="G">
+            <label class="form-check-label" for="flexRadioDefault3">
+                Genre
+            </label>
+        </div>
+    </div>
+    <div class="mb-3 row">
+        @*size, depending on screen, will adjust text to next lines*@
+        <div class="col-sm-10">
 
+            @if (Model.SearchType == "T" || Model.SearchType == "K")
+            {
+                <input type="text" required class="form-control" name="searchQuery" id="searchQuery" placeholder="Search keyword" value="@Model.SearchQuery">
+            }
+            else
+            {
+                <div class="mb-3 row">
+                    <div class="col-sm-1">
+                        <label class="col-form-label" for="searchGenre">Genre</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <select id="searchGenre" name="searchGenre" class="form-select" aria-label="Default select example">
+                            @if (Model.SelectedGenre == "Action") @*we need additional class*@
+                            {
+                                <option value="Action" selected>Action</option>
+                            }
+                            else
+                            {
+                                <option value="Action">Action</option>
+                            }
+                            @if (Model.SelectedGenre == "Adventure")
+                            {
+                                <option value="Adventure" selected>Adventure</option>
+                            }
+                            else
+                            {
+                                <option value="Adventure">Adventure</option>
+                            }
+                            @if (Model.SelectedGenre == "Comedy")
+                            {
+                                <option value="Comedy" selected>Comedy</option>
+                            }
+                            else
+                            {
+                                <option value="Comedy">Comedy</option>
+                            }
+                            @if (Model.SelectedGenre == "Drama")
+                            {
+                                <option value="Drama" selected>Drama</option>
+                            }
+                            else
+                            {
+                                <option value="Drama">Drama</option>
+                            }
+                            @if (Model.SelectedGenre == "Fantasy")
+                            {
+                                <option value="Fantasy" selected>Fantasy</option>
+                            }
+                            else
+                            {
+                                <option value="Fantasy">Fantasy</option>
+                            }
+                            @if (Model.SelectedGenre == "Horror")
+                            {
+                                <option value="Horror" selected>Horror</option>
+                            }
+                            else
+                            {
+                                <option value="Horror">Horror</option>
+                            }
+                            @if (Model.SelectedGenre == "Musicals")
+                            {
+                                <option value="Musicals" selected>Musicals</option>
+                            }
+                            else
+                            {
+                                <option value="Musicals">Musicals</option>
+                            }
+                            @if (Model.SelectedGenre == "Mystery")
+                            {
+                                <option value="Mystery" selected>Mystery</option>
+                            }
+                            else
+                            {
+                                <option value="Mystery">Mystery</option>
+                            }
+                            @if (Model.SelectedGenre == "Romance")
+                            {
+                                <option value="Romance" selected>Romance</option>
+                            }
+                            else
+                            {
+                                <option value="Romance">Romance</option>
+                            }
+                            @if (Model.SelectedGenre == "ScienceFiction")
+                            {
+                                <option value="ScienceFiction" selected>ScienceFiction</option>
+                            }
+                            else
+                            {
+                                <option value="ScienceFiction">ScienceFiction</option>
+                            }
+                            @if (Model.SelectedGenre == "Sports")
+                            {
+                                <option value="Sports" selected>Sports</option>
+                            }
+                            else
+                            {
+                                <option value="Sports">Sports</option>
+                            }
+                            @if (Model.SelectedGenre == "Thriller")
+                            {
+                                <option value="Thriller" selected>Thriller</option>
+                            }
+                            else
+                            {
+                                <option value="Thriller">Thriller</option>
+                            }
+                            @if (Model.SelectedGenre == "Western")
+                            {
+                                <option value="Western" selected>Western</option>
+                            }
+                            else
+                            {
+                                <option value="Western">Western</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+            }
+        </div>
+        <div class="col-sm-2">
+            <button type="submit" class="btn btn-primary">Find</button>
+        </div>
+    </div>
+
+
+
+</form>
+
+@foreach (var movie in Model.Movies) //we go with a loop, using razor syntax
+{
+    <p>
+        <h2>@movie.Title</h2><br>
+        <h4>@movie.Genre</h4>
+        @foreach (var keyword in movie.Keywords)
+        {
+            <h6>@keyword</h6>
+        }
+    </p>
+    //we print some data
+}
     
