--- a/MovieRecommender2022.Web/Pages/Movies/Delete.cshtml
+++ b/MovieRecommender2022.Web/Pages/Movies/Delete.cshtml
@@ -24,9 +24,9 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Description)
         </dd>
-        <dt class="col-sm-2">
+        @*<dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Movie.Genre)
-        </dt>
+        </dt>*@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Genre)
         </dd>
