database info and css

--- a/MovieRecommender2022.Web/Pages/Index.cshtml
+++ b/MovieRecommender2022.Web/Pages/Index.cshtml
@@ -3,14 +3,20 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
-<div class="text-center">
+<header>
+@*<div class="text-center">
     <h1 class="display-4">Movie recommender</h1>
-    <a href="Movies">Movies</a>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <a href="Movies"">Movies </a>*@
+    	<div class="text-center">
+<h1 class="display-4">Movie recommender</h1>
+<p>Can't decide what to watch? Use this recommender for movie inspiration!</p>
+	
+		</div>
+   </header>
+@*</div>*@
 <div class="text-center">
-    <h1 class="display-4">Find a movie</h1>
+    <h3 class="display-4">Find a movie</h3>
+    <a href="Movies"">Movies </a>
 </div>
 
 <form method="post" id="mainForm">
