--- a/MovieRecommender2022.Web/Pages/Movies/Create.cshtml
+++ b/MovieRecommender2022.Web/Pages/Movies/Create.cshtml
@@ -23,15 +23,20 @@
                 <input asp-for="Movie.Description" class="form-control" />
                 <span asp-validation-for="Movie.Description" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="Movie.Genre" class="control-label"></label>
                 <select asp-for="Movie.Genre" class="form-control"></select>
                 <span asp-validation-for="Movie.Genre" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="Movie.Rating" class="control-label"></label>
                 <input asp-for="Movie.Rating" class="form-control" />
                 <span asp-validation-for="Movie.Rating" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Movie.Keywords" class="control-label"></label>
+                <input asp-for="Movie.Keywords" class="form-control" />
+                <span asp-validation-for="Movie.Keywords" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
