--- a/MovieRecommender2022.Web/Pages/Movies/Details.cshtml
+++ b/MovieRecommender2022.Web/Pages/Movies/Details.cshtml
@@ -23,12 +23,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Description)
         </dd>
-        @*<dt class="col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Movie.Genre)
-        </dt>*@
-        @*<dd class="col-sm-10">
+        </dt>
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Genre)
-        </dd>*@
+        </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Movie.Rating)
         </dt>
