--- a/MovieRecommender2022.Web/Pages/Movies/Index.cshtml
+++ b/MovieRecommender2022.Web/Pages/Movies/Index.cshtml
@@ -2,10 +2,10 @@
 @model MovieRecommender2022.Pages.Movies.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Movie Database";
 }
 
-<h1>Index</h1>
+<h1>Movie Database</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -19,9 +19,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movie[0].Description)
             </th>
-            @*<th>
+            <th>
                 @Html.DisplayNameFor(model => model.Movie[0].Genre)
-            </th>*@
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Movie[0].Rating)
             </th>
@@ -37,9 +37,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-            @*<td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Genre)
-            </td>*@
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Rating)
             </td>
