--- a/MovieRecommender2022.Web/Pages/Movies/Edit.cshtml
+++ b/MovieRecommender2022.Web/Pages/Movies/Edit.cshtml
@@ -24,16 +24,27 @@
                 <input asp-for="Movie.Description" class="form-control" />
                 <span asp-validation-for="Movie.Description" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="Movie.Genre" class="control-label"></label>
                 <select asp-for="Movie.Genre" class="form-control"></select>
                 <span asp-validation-for="Movie.Genre" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <label asp-for="Movie.Rating" class="control-label"></label>
                 <input asp-for="Movie.Rating" class="form-control" />
                 <span asp-validation-for="Movie.Rating" class="text-danger"></span>
             </div>
+
+            @*doesn't work tried to implement dropdown for keywords like did with owners
+             <div class="form-group">
+                <label asp-for="Movie.Keywords" class="control-label"></label>
+            <select class="js-example-basic-single" id = "movieKeyword" name="Movie/Keyword">
+             <option value="AL">Alabama</option>
+              <option value="WY">Wyoming</option>
+            </select>
+            </div>*@
+
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
